--- a/composer.json
+++ b/composer.json
@@ -19,5 +19,8 @@
             "name": "Rudie Dirkx",
             "email": "github@hotblocks.nl"
         }
-    ]
+    ],
+    "require-dev": {
+        "symfony/var-dumper": "^6.0"
+    }
 }
